add elenpi dependecy

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/nomocas/babelute/issues"
   },
-  "homepage": "https://github.com/nomocas/babelute#readme"
+  "homepage": "https://github.com/nomocas/babelute#readme",
+  "dependencies": {
+    "elenpi": "^0.3.0"
+  }
 }
