--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "mocha",
     "karma": "NODE_ENV=production karma start",
     "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text mocha test/*.js",
+    "coveralls": "npm run cover && cat ./coverage/lcov.info | coveralls",
     "prepublish": "NODE_ENV=production npm test",
     "esdoc": "npm test && esdoc"
   },
@@ -60,14 +61,17 @@
     "babel-register": "^6.14.0",
     "babelrc-rollup": "^3.0.0",
     "chai": "^3.5.0",
+    "coveralls": "^2.12.0",
     "cross-env": "^2.0.1",
     "eslint": "^3.15.0",
     "eslint-plugin-import": "^2.2.0",
     "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-rollup-preprocessor": "^3.0.3",
+    "karma-safari-launcher": "^1.0.0",
     "mocha": "^3.0.2",
     "nyc": "^8.1.0",
     "rollup": "^0.41.4",
